tests/functional2/lang/let/parse-fail-unterminated.err.exp
error: syntax error, expecting ';' to end binding
       at /pwd/in.nix:3:1:
            2|   a = ""
            3| in a
             | ^
            4|
